# SalesforceMCPServer

./: .gitignore  README.md  client.py  main.py  pyproject.toml  requirements.txt  sample.py
config/: .env.example  requirements.txt
docs/: README.md
src/: main.py  server.py
tests/: test_mcp_server.py
